--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "@mantine/core": "^8.2.8",
     "@mantine/hooks": "^8.2.8",
+    "@reduxjs/toolkit": "^2.9.0",
+    "@types/react-redux": "^7.1.34",
     "classnames": "^2.5.1",
     "ky": "^1.9.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "sass": "^1.89.2"
   },
   "devDependencies": {
